# PolyMarket-100X-Hackathon

./: Anchor.toml  package-lock.json
polymarket/programs/polymarket/: Cargo.toml
programs/polymarket/: Cargo.toml
programs/polymarket/src/: lib.rs  state.rs
programs/polymarket/src/instructions/: create_ata_mint.rs  create_bet.rs  create_market.rs  create_mint.rs  get_bet.rs  mod.rs
tests/: polymarket.ts
